--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.5.0",
+    "crypto-js": "^4.1.1",
     "discord-player": "^3.4.0",
     "discord.js": "^12.5.3",
     "ffmpeg-static": "^4.2.8",
